--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,12 @@
     "require": {
         "php": "^8.0.2",
         "dcblogdev/laravel-dropbox": "^3.0",
-        "guzzlehttp/guzzle": "^7.2",
+        "graham-campbell/guzzle-factory": "7.0",
+        "guzzlehttp/guzzle": "^7.8",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "spatie/flysystem-dropbox": "^3.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
